--- a/www/index.html
+++ b/www/index.html
@@ -19,13 +19,13 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="starter">
-
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+    <ion-nav-bar>
+      <ion-nav-back-button class="button-clear">
+        <i class="ion-arrow-left-c"></i> Back
+      </ion-nav-back-button>
+    </ion-nav-bar>
+    
+    <ion-nav-view>
+    </ion-nav-view>
   </body>
 </html>
