--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="dbt">
     <ion-nav-bar>
       <ion-nav-back-button class="button-clear">
         <i class="ion-arrow-left-c"></i> Back
