Add contact controller

--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,9 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/controllers/contactController.js"></script>
+    <script src="js/services/contactService.js"></script>
+    
   </head>
   <body ng-app="dbt">
     <ion-nav-bar>
