--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers/contactController.js"></script>
+    <script src="js/controllers/communcationController.js"></script>
     <script src="js/services/contactService.js"></script>
     
   </head>
