Add android platform and blank AddContact screen

--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers/contactController.js"></script>
     <script src="js/controllers/communcationController.js"></script>
+    <script src="js/controllers/addContact.js"></script>
     <script src="js/services/contactService.js"></script>
     
   </head>
