--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,9 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -19,7 +22,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers/contactController.js"></script>
     <script src="js/controllers/communcationController.js"></script>
-    <script src="js/controllers/addContact.js"></script>
+    <script src="js/controllers/addContactController.js"></script>
     <script src="js/services/contactService.js"></script>
     
   </head>
