Add Information tab

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     <script src="js/controllers/contactController.js"></script>
     <script src="js/controllers/communcationController.js"></script>
     <script src="js/controllers/addContactController.js"></script>
+    <script src="js/controllers/informationController.js"></script>
     <script src="js/controllers/profileController.js"></script>
     <script src="js/services/contactService.js"></script>
     
