--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="js/controllers/informationController.js"></script>
     <script src="js/controllers/profileController.js"></script>
     <script src="js/services/contactService.js"></script>
+    <script src="js/services/communicationsService.js"></script>
     
   </head>
   <!--creates an angular module named dbt -->
