Add communcation checkbox cancel

--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
   <!--creates an angular module named dbt -->
   <body ng-app="dbt">
     <!--location navigation bar, as compiled in ionic -->
-    <ion-nav-bar>
+    <ion-nav-bar class="bar-positive">
       <!-- button-clear denotes it's css class type defined in ionic -->
       <ion-nav-back-button class="button-clear">
         <!-- ion-arrow-left-c denotes an ionic defined button type -->
