Store report to cache

--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/services/contactService.js"></script>
     <script src="js/services/communicationsService.js"></script>
     <script src="js/services/CSVService.js"></script>
+    <script src="js/services/FileService.js"></script>
     
   </head>
   <!--creates an angular module named dbt -->
