Add emailing summary csv file

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
     <script src="js/services/communicationsService.js"></script>
     <script src="js/services/CSVService.js"></script>
     <script src="js/services/FileService.js"></script>
+    <script src="js/services/EmailService.js"></script>
     
   </head>
   <!--creates an angular module named dbt -->
