Add find contact from native contact app

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -13,4 +13,5 @@
       Hello World
     </ion-card-content>
   </ion-card>
+  <button primary (click)= "findContact()">Find contact</button>
 </ion-content>
