--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,8 @@
   <ion-app></ion-app>
 
   <script src="cordova.js"></script>
+  <!-- Zone.js and Reflect-metadata  -->
+  <script src="build/js/angular2-polyfills.js"></script>
   <script src="build/js/app.bundle.js"></script>
 </body>
 
