--- a/app/pages/textMessages/textMessages.html
+++ b/app/pages/textMessages/textMessages.html
@@ -4,4 +4,9 @@
   </ion-title>
 </ion-navbar>
 <ion-content padding class="textMessages">
+  <ion-list>
+    <ion-item *ngFor="#item of params.sms">
+      {{item.body}}
+    </ion-item>
+  </ion-list>
 </ion-content>
