--- a/app/pages/textMessages/textMessages.html
+++ b/app/pages/textMessages/textMessages.html
@@ -5,7 +5,7 @@
 </ion-navbar>
 <ion-content padding class="textMessages">
   <ion-list>
-    <ion-item *ngFor="let item of params.sms">
+    <ion-item *ngFor="let item of params.sms" [ngClass]="{'text-right': item.type === 1}">
       <ion-avatar *ngIf="item.type === 1" item-right>
         <img src="http://ionicframework.com/dist/preview-app/www/img/avatar-cher.png" />
       </ion-avatar>
