--- a/app/pages/textMessages/textMessages.html
+++ b/app/pages/textMessages/textMessages.html
@@ -3,15 +3,9 @@
     {{ params.name }}
   </ion-title>
 </ion-navbar>
-<ion-content padding class="textMessages">
+<ion-content class="textMessages">
   <ion-list>
-    <ion-item *ngFor="let item of params.sms" [ngClass]="{'text-right': item.type === 1}">
-      <ion-avatar *ngIf="item.type === 1" item-right>
-        <img src="http://ionicframework.com/dist/preview-app/www/img/avatar-cher.png" />
-      </ion-avatar>
-      <ion-avatar *ngIf="item.type === 2" item-left>
-        <img src="http://ionicframework.com/dist/preview-app/www/img/avatar-cher.png" />
-      </ion-avatar>
+    <ion-item *ngFor="let item of params.sms" [ngClass]="{'text-right': item.type === 2}">
       <h2 *ngIf="item.type === 1">{{ params.name }}</h2>      
       <h2 *ngIf="item.type === 2">me</h2>
       <p>{{item.body}}</p>
