--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,8 +1,10 @@
-<ion-navbar *navbar>
-  <ion-title>
-    Home
-  </ion-title>
-</ion-navbar>
+<ion-header>
+  <ion-navbar>
+    <ion-title>
+      Home
+    </ion-title>
+  </ion-navbar>
+</ion-header>
 
 <ion-content padding class="home">
   <button (click)="pickContact()" >Pick a Contact</button>
