--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,8 @@
   <ion-app></ion-app>
 
   <script src="cordova.js"></script>
+  <!-- Polyfill needed for platforms without Promise and Collection support -->
+  <script src="build/js/es6-shim.min.js"></script>
   <!-- Zone.js and Reflect-metadata  -->
   <script src="build/js/zone.js"></script>
   <script src="build/js/Reflect.js"></script>
